--- a/hw4/index.html
+++ b/hw4/index.html
@@ -102,7 +102,7 @@
         <div id="header">
 
             <div id="logodiv">
-                <img style="height: 50px;" src="img/mis.png" />
+                <img style="height: 50px;" src="img/MIS.png" />
             </div>
 
             <div id="linkdiv">
@@ -186,7 +186,7 @@
 
         <div id="footer">
             <div style="margin-right: 5px;">
-                <img style="width:40px;" src="img/ou.png" />
+                <img style="width:40px;" src="img/OU.png" />
             </div>
             <div>
                 Management Information Systems<br />
